--- a/reddit/app/views/links/index.html.erb
+++ b/reddit/app/views/links/index.html.erb
@@ -13,6 +13,7 @@
         <%= link.get_upvotes.size%>
       <%end%>
       <%= link_to dislike_link_path(link), method: :put, class: "btn btn-default btn-sm" do %>
+        <span class="glyphicon glyphicon-chevron-down"></span>
       Dislike
         <%= link.get_downvotes.size%>
       <%end%>
