--- a/reddit/app/views/links/index.html.erb
+++ b/reddit/app/views/links/index.html.erb
@@ -12,7 +12,7 @@
         Like
         <%= link.get_upvotes.size%>
       <%end%>
-      <%= link_to dislike_link_path(link), method: :put, class: "btn btn-default btn-sm" do %>
+      <%= link_to like_link_path(link), method: :put, class: "btn btn-default btn-sm" do %>
         <span class="glyphicon glyphicon-chevron-down"></span>
       Dislike
         <%= link.get_downvotes.size%>
